--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		<meta name="description" content="Decorative Design is an event planner that provides world-class planning in several catagories.">
-		<meta name="keywords" content="Decorative Design, Planners, Decorative">
+		<meta name="description" content="Silverline Tutoring is a non-profit organization that provides free tutoring services.">
+		<meta name="keywords" content="tutoring, education, free learning">
 		<title>Silverline Tutoring</title>
 		<link rel="icon" type="image/icon" href="Img/logo.svg">
 		
