--- a/team.html
+++ b/team.html
@@ -86,7 +86,7 @@
        
         <div class="container" style="color: #D6D3CD; position: relative;">
             <h1 class="pt-3">Executive Team</h1><br>
-            <p>Silverline tutoring services is made up of a team of excelling highschool and college students from a variety of places. Their goal is to use previous real-world experiences and lessons to build a stronger and more successful organization.<br> <br>The purpose? Solving the education divide. </p>
+            <p>Silverline tutoring services is made up of a team of excelling highschool and college students from a variety of places. Their goal is to use previous real-world experiences and lessons to build a stronger and more successful organization. The purpose? Solving the education divide.<br><br>Interested in joining the team? Find more information <a href="https://docs.google.com/document/d/1UMz9CIYSuJ1WEQWuOusSQlHchQwpgFmqwVLOTzX0D9w/edit">here</a>. </p>
             <div class="row align-items-stretch">
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size0">
