--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<p data-aos="fade-up" data-aos-delay="200">From the depths of math to complex texts in English,
 						every student has struggled. We want
 						to bridge this divide in education by providing free tutoring to any student.</p>
-					<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="#" class="btn btn-primary">Read
+					<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="about.html" class="btn btn-primary">Read
 							more</a></p>
 				</div>
 				<div class="col-lg-6">
@@ -185,7 +185,7 @@
 									<img src="images/Home/eng.png" alt="Image" class="img-fluid">
 								</div>
 								<div class="mt-4">
-									<h3><a href="#">Versatile Tutoring</a></h3>
+									<h3>>Versatile Tutoring</h3>
 									<span class="meta">We have 40+ tutors readily available to help any student in any
 										subject from english to calculus.</span>
 								</div>
@@ -197,7 +197,7 @@
 									<img src="images/Home/flexibile.png" alt="Image" class="img-fluid">
 								</div>
 								<div class="mt-4">
-									<h3><a href="#">Flexibility</a></h3>
+									<h3>Flexibility</h3>
 									<span class="meta">Our tutors can adjust their meeting times and teaching styles per
 										each student to maximize the student's benefit.</span>
 								</div>
@@ -208,7 +208,7 @@
 									<img src="images/Home/community.png" alt="Image" class="img-fluid">
 								</div>
 								<div class="mt-4">
-									<h3><a href="#">Community</a></h3>
+									<h3>Community</h3>
 									<span class="meta">We have a vast community with helpful members and events such as
 										trivia night, allowing each student to learn in a helpful environment.</span>
 								</div>
@@ -219,7 +219,7 @@
 									<img src="images/Home/quality.png" alt="Image" class="img-fluid">
 								</div>
 								<div class="mt-4">
-									<h3><a href="#">Quality Lessons</a></h3>
+									<h3>Quality Lessons</h3>
 									<span class="meta">Each tutor is carefully interviewed or certified prior to
 										teaching, allowing for quality lesson plans for students.</span>
 								</div>
@@ -230,7 +230,7 @@
 					</div>
 				</div>
 				<br><br>
-				<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="#"
+				<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="services.html"
 						class="btn btn-primary text-lg-center">View all services</a></p>
 			</div>
 
@@ -366,7 +366,7 @@
 							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
-									Fill out the <a href="#">student form</a> located under "get involved," and feel
+									Fill out the <a href="get-involved.html">student form</a> located under "get involved," and feel
 									free to join our Discord server to learn
 									more.
 								</div>
@@ -421,7 +421,7 @@
 							<div id="collapseFour" class="collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
-									Fill out the <a href="#">tutor form</a> located under "get involved," and we will
+									Fill out the <a href="get-involved.html">tutor form</a> located under "get involved," and we will
 									reach out to you. Be prepared to answer
 									questions during an interview as well as a short 5-10 minute lesson to demonstrate
 									your skills in
@@ -462,7 +462,7 @@
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
 									Silverline tutoring is run by highschoolers and college students. Our full team can
-									be found <a href="#">here</a>.
+									be found <a href="team.html">here</a>.
 								</div>
 							</div>
 
@@ -474,7 +474,7 @@
 
 			</div>
 			<div class="text-center" style="margin-bottom: 0px;">
-				<p class="" data-aos="fade-up" data-aos-delay="300" style="padding-top: 20px;"><a href="#"
+				<p class="" data-aos="fade-up" data-aos-delay="300" style="padding-top: 20px;"><a href="get-involved.html"
 						class="btn btn-primary text-lg-center">Get Involved Today!</a></p>
 			</div>
 		</div> <!-- .container -->
