--- a/method.html
+++ b/method.html
@@ -117,7 +117,7 @@
                 <div class="col-lg-6">
                     <p>Shortly after receiving the information of an applicant, one of our executive board members will
                         contact the applicant and conduct a short interview. More information about the interview can be
-                        found under <a href="#">Get Involved</a>. After acceptance, the tutor will be brought into our
+                        found under <a href="get-involved.html">Get Involved</a>. After acceptance, the tutor will be brought into our
                         Discord server—the main hub of our community—where they will be paired with a student. Then, one
                         of our coordinators will confirm with the tutor which subject that particular student wishes to
                         learn. The subject desired by a tutor will be indicated during the interview. From this point,
@@ -155,13 +155,13 @@
                 </div>
                 <div class="col-lg-6">
                     <p>For the most part, a student looking for tutoring simply needs to fill out the form under <a
-                            href="#">Get Involved</a>. From there, they can join our Discord server where they will be
+                            href="get-involved.html">Get Involved</a>. From there, they can join our Discord server where they will be
                         notified of the tutor they are assigned to. Students also have great flexibility in tutoring,
                         but we ask that all students communicate with their tutors 12 hours in advance to allow tutors
                         to be ready and prepared for any given lesson. There is no fixed lesson plan for each student as
                         it varies from tutor to tutor, but all plans under our system are verified and assured for a
                         quality learning experience. We also have other features for immediate help and student
-                        resources that can be found under <a href="#">Our Community</a></p>
+                        resources that can be found under <a href="community.html">Our Community</a></p>
                 </div>
             </div>
         </div>
