--- a/services.html
+++ b/services.html
@@ -130,7 +130,7 @@
 					<span class="subheading" data-aos="fade-up">Student Support</span>
 					<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="100">Resources</h2>
 
-					<p data-aos="fade-up" data-aos-delay="200">Here at Silverline, we offer various resources to help students on standardized exams. We provide SAT problems of the day that allow students to practice answering exam questions every day. We also provide different online resources that will allow them to master any subject they are struggling with. As for AP resources, along with providing tutoring for every AP, we supply resources and free online resources for every AP, which allows students to master these subjects. From Princeton Review to Tutor Doctor, Silverline has all the resources necessary for students. General resources can also be found through the <a href="#">Discord Community.</a>
+					<p data-aos="fade-up" data-aos-delay="200">Here at Silverline, we offer various resources to help students on standardized exams. We provide SAT problems of the day that allow students to practice answering exam questions every day. We also provide different online resources that will allow them to master any subject they are struggling with. As for AP resources, along with providing tutoring for every AP, we supply resources and free online resources for every AP, which allows students to master these subjects. From Princeton Review to Tutor Doctor, Silverline has all the resources necessary for students. General resources can also be found through the <a href="https://discord.com/invite/wQMk8gCect">Discord Community.</a>
 					</p>
 				</div>
 				<div class="col-lg-6">
