--- a/index.html
+++ b/index.html
@@ -5,20 +5,17 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and students in a community with over 900 dedicated members. Founded by college and high school students, we recognize the difficulty of learning—we’ve all been there..">
+	<meta name="keywords" content="tutoring, education, free learning, volunteering, 501(c)(3)">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=DM+Sans:wght@500&family=Hammersmith+One&family=Open+Sans:wght@400;800&family=Poppins:wght@500&family=Raleway:wght@900&family=Roboto:wght@900&family=Work+Sans:wght@700&display=swap"
-		rel="stylesheet">
-
+	<link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=DM+Sans:wght@500&family=Hammersmith+One&family=Open+Sans:wght@400;800&family=Poppins:wght@500&family=Raleway:wght@900&family=Roboto:wght@900&family=Work+Sans:wght@700&display=swap"rel="stylesheet">
 	<link rel="stylesheet" href="fonts/icomoon/style.css">
 	<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-
 	<link rel="stylesheet" href="css/tiny-slider.css">
 	<link rel="stylesheet" href="css/flaticon.css">
 	<link rel="stylesheet" href="css/aos.css">
@@ -28,10 +25,8 @@
 	<link rel="stylesheet" href="css/fontawesome/css/all.min.css">
 	<link rel="stylesheet" href="css/fontawesome/webfonts/.">
 	<link rel="icon" type="image/x-icon" href="images/icon.svg">
-
 	<title>Silverline Tutoring</title>
 </head>
-
 <body>
 	<div class="site-mobile-menu site-navbar-target">
 		<div class="site-mobile-menu-header">
@@ -41,15 +36,11 @@
 		</div>
 		<div class="site-mobile-menu-body"></div>
 	</div>
-
 	<nav class="site-nav ">
 		<div class="container nav1">
-
 			<img style="max-height: 70px; margin-top: -15px;" class="float-start" src="images/logo4.svg">
 			<img style="max-height: 70px; margin-top: -15px;" class="float-start1 hide" src="images/logo1.svg">
 			<div class="site-navigation">
-
-
 				<ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu float-start">
 					<li class="active"><a href="index.html">Home</a></li>
 					<li class="has-children non">
@@ -64,13 +55,10 @@
 					<li class="non"><a href="community.html">Our Community</a></li>
 					<li class="non"><a href="get-involved.html">Get Involved</a></li>
 					<li class="non"><a href="reviews.html">Reviews</a></li>
-
 				</ul>
-
 				<ul class="js-clone-nav d-none d-lg-inline-block text-end site-menu float-end">
 					<li class="cta-button"><a href="mailto:silverlinetutoring2021@gmail.com">Contact Us</a></li>
 				</ul>
-
 				<a href="#"
 					class="burger ms-auto float-end site-menu-toggle js-menu-toggle d-inline-block d-lg-none light"
 					data-toggle="collapse" data-target="#main-navbar">
@@ -80,9 +68,6 @@
 
 		</div>
 	</nav>
-
-
-
 	<div class="hero hero1 overlay" style="background-image: url('images/hero_1.svg');">
 		<div class="container">
 			<div class="row align-items-center">
@@ -103,15 +88,9 @@
 									Signup</a></p>
 						</div>
 				</div>
-
-
 			</div>
 		</div>
-
-
 	</div>
-
-
 	<div class="section section-2">
 		<div class="container">
 			<div class="row align-items-center">
@@ -127,7 +106,8 @@
 					<p data-aos="fade-up" data-aos-delay="200">From the depths of math to complex texts in English,
 						every student has struggled. We want
 						to bridge this divide in education by providing free tutoring to any student.</p>
-					<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="about.html" class="btn btn-primary">Read
+					<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="about.html"
+							class="btn btn-primary">Read
 							more</a></p>
 				</div>
 				<div class="col-lg-6">
@@ -135,23 +115,18 @@
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
 							<img src="images/about_1.png" alt="Image" class="gen-img" style="margin-left: 20px;">
 						</div>
-
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
-
-
 	<div class="section section-3" style="background: #1E2022;">
 		<div class="container">
 			<div class="row align-items-center justify-content-between  mb-5">
 				<div class="col-lg-6" data-aos="fade-up">
 					<span class="subheading">Services</span>
 					<h2 class="heading mb-3">A Plethora of Resources</h2>
-					<p>We understand that different students have different needs per subject. Therefore, we have a team
-						of dedicated tutors ready to aid the student regardless of their needs.</p>
+					<p>We understand that different students have different needs per subject. Therefore, we have a team of dedicated tutors ready to aid the student regardless of their needs.</p>
 				</div>
 				<div class="col-lg-5 text-md-end" data-aos="fade-up" data-aos-delay="100">
 					<div id="destination-controls">
@@ -161,7 +136,6 @@
 								<path d="M47.5 16L3.5 16" stroke="#5271FF" stroke-width="2" />
 								<path d="M17.25 1.11246L2 16L17.25 30.8875" stroke="#5271FF" stroke-width="2" />
 							</svg>
-
 						</span>
 						<span class="next" data-controls="next">
 							<svg width="64" height="36" viewBox="0 0 64 36" fill="none"
@@ -174,9 +148,7 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="row text-center">
-
 				<div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
 					<div class="destination-slider-wrap">
 						<div class="destination-slider">
@@ -191,7 +163,6 @@
 								</div>
 
 							</div>
-
 							<div class="destination">
 								<div class="thumb">
 									<img src="images/Home/flexibile.png" alt="Image" class="img-fluid">
@@ -202,7 +173,6 @@
 										each student to maximize the student's benefit.</span>
 								</div>
 							</div>
-
 							<div class="destination">
 								<div class="thumb">
 									<img src="images/Home/community.png" alt="Image" class="img-fluid">
@@ -213,7 +183,6 @@
 										trivia night, allowing each student to learn in a helpful environment.</span>
 								</div>
 							</div>
-
 							<div class="destination">
 								<div class="thumb">
 									<img src="images/Home/quality.png" alt="Image" class="img-fluid">
@@ -224,8 +193,6 @@
 										teaching, allowing for quality lesson plans for students.</span>
 								</div>
 							</div>
-
-
 						</div>
 					</div>
 				</div>
@@ -233,9 +200,7 @@
 				<p class="my-5" data-aos="fade-up" data-aos-delay="300"><a href="services.html"
 						class="btn btn-primary text-lg-center">View all services</a></p>
 			</div>
-
 		</div>
-
 	</div>
 	<div id="statistic" class="section bg-light text-lg-center loc">
 		<div class="container">
@@ -248,36 +213,31 @@
 							<div class="counting" data-count="30">0</div>
 							<h5>Countries</h5>
 						</div>
-
 						<div class="col-lg-33 stats">
 							<i class="fa fa-user" aria-hidden="true"></i>
-							<div class="counting" data-count="1670">0</div>
+							<div class="counting" data-count="990">0</div>
 							<h5>Members</h5>
 						</div>
-
 						<div class="col-lg-33 stats">
 							<i class="fa fa-clock" aria-hidden="true"></i>
-							<div class="counting" data-count="1000">0</div>
+							<div class="counting" data-count="6752">0</div>
 							<h5>Hours of Tutoring</h5>
 						</div>
-
 						<div class="col-lg-33 stats">
 							<i class="fa fa-chalkboard-teacher" aria-hidden="true"></i>
-							<div class="counting" data-count="200">0</div>
-							<h5>Tutors</h5>
+							<div class="counting" data-count="16">0</div>
+							<h5>Current Tutors</h5>
 						</div>
 					</div>
 				</div>
-
-
 			</div>
+			<br><br>
+			<p class="" data-aos="fade-up" data-aos-delay="300" style="padding-top: 20px;"><a
+					href="community.html#target" class="btn btn-primary text-lg-center">View More Statistics</a></p>
 		</div>
 	</div>
-
-
 	<div class="section">
 		<div class="container">
-
 			<div class="row">
 				<div class="col-lg-5 mb-lg-0 me-auto text-lg-center testimonial-wrap" data-aos="fade-up"
 					data-aos-delay="0">
@@ -354,7 +314,6 @@
 				<div class="col-lg-5 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="100">
 					<span class="subheading">Still Unsure?</span>
 					<h2 class="heading mb-5">Frequently Asked <br> Questions</h2>
-
 					<div class="custom-accordion" id="accordion_1">
 						<div class="accordion-item">
 							<h2 class="mb-0">
@@ -366,7 +325,8 @@
 							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
-									Fill out the <a href="get-involved.html">student form</a> located under "get involved," and feel
+									Fill out the <a href="get-involved.html">student form</a> located under "get
+									involved," and feel
 									free to join our Discord server to learn
 									more.
 								</div>
@@ -383,9 +343,7 @@
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
 									Tutoring sessions take place online and can be conducted through zoom or other video
-									conference
-									platforms. If you are a member of our Discord server, the voice channel feature will
-									often be used by our tutors.
+									conference platforms. If you are a member of our Discord server, the voice channel feature will often be used by our tutors.
 								</div>
 							</div>
 						</div> <!-- .accordion-item -->
@@ -393,23 +351,18 @@
 							<h2 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseThree" aria-expanded="false"
-									aria-controls="collapseThree">Do I have to pay
-									for tutoring?</button>
+									aria-controls="collapseThree">Do I have to pay for tutoring?</button>
 							</h2>
-
 							<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
 									No! Silverline is a nonprofit dedicated to ensuring that students recieve tutoring
-									for free. Tutors earn volunteer hours in exchange for their help.
-									However, students can earn from our program as we often host trivia nights with a
+									for free. Tutors earn volunteer hours in exchange for their help. However, students can earn from our program as we often host trivia nights with a
 									cash prize thanks to our sponsors.
 								</div>
 							</div>
 
 						</div> <!-- .accordion-item -->
-
-
 						<div class="accordion-item">
 							<h2 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
@@ -417,78 +370,54 @@
 									aria-controls="collapseFour">How do I sign up
 									to be a tutor?</button>
 							</h2>
-
 							<div id="collapseFour" class="collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
-									Fill out the <a href="get-involved.html">tutor form</a> located under "get involved," and we will
-									reach out to you. Be prepared to answer
-									questions during an interview as well as a short 5-10 minute lesson to demonstrate
-									your skills in
-									teaching. Afterwards, we will determine if you are suited to teach and the specific
+									Fill out the <a href="get-involved.html">tutor form</a> located under "get
+									involved," and we will reach out to you. Be prepared to answer questions during an interview as well as a short 5-10 minute lesson to demonstrate
+									your skills in teaching. Afterwards, we will determine if you are suited to teach and the specific
 									subjects.
 								</div>
 							</div>
-
 						</div> <!-- .accordion-item -->
 						<div class="accordion-item">
 							<h2 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseFive" aria-expanded="false"
-									aria-controls="collapseFive">What is the
-									experience of the tutors?</button>
+									aria-controls="collapseFive">What is the experience of the tutors?</button>
 							</h2>
 
 							<div id="collapseFive" class="collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
 									Most of our tutors are high school senior or college students. However, some of our
-									tutors are
-									teachers or former
-									teachers. Regardless of the tutor, we guaruntee that all of our tutors are
-									qualified.
+									tutors are teachers or former teachers. Regardless of the tutor, we guaruntee that all of our tutors are qualified.
 								</div>
 							</div>
 
 						</div> <!-- .accordion-item -->
 						<div class="accordion-item">
 							<h2 class="mb-0">
-								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
-									data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseFive">Who
-									runs Silverline Tutoring?</button>
+								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix"
+									aria-expanded="false" aria-controls="collapseFive">Who runs Silverline Tutoring?</button>
 							</h2>
-
 							<div id="collapseSix" class="collapse" aria-labelledby="headingThree"
 								data-bs-parent="#accordion_1">
 								<div class="accordion-body">
-									Silverline tutoring is run by highschoolers and college students. Our full team can
-									be found <a href="team.html">here</a>.
+									Silverline tutoring is run by highschoolers and college students. Our full team can	be found <a href="team.html">here</a>.
 								</div>
 							</div>
-
-						</div> <!-- .accordion-item -->
-
-
+						</div>
 					</div>
 				</div>
-
 			</div>
 			<div class="text-center" style="margin-bottom: 0px;">
-				<p class="" data-aos="fade-up" data-aos-delay="300" style="padding-top: 20px;"><a href="get-involved.html"
-						class="btn btn-primary text-lg-center">Get Involved Today!</a></p>
+				<p class="" data-aos="fade-up" data-aos-delay="300" style="padding-top: 20px;"><a href="get-involved.html" class="btn btn-primary text-lg-center">Get Involved Today!</a></p>
 			</div>
-		</div> <!-- .container -->
+		</div>
+	</div>
 
-	</div> <!-- /.untree_co-section -->
-
-
-
-
-
-
-
-
-
+	<!-- Footer -->
 	<div class="site-footer">
 		<div class="container align-items-center">
 			<div class="row align-self-lg-center">
@@ -496,12 +425,10 @@
 					<div class="widget">
 						<h3>Silverline Tutoring</h3>
 						<p>Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and
-							students in a community
-							with over 1600 dedicated members. Founded by college and high school students, we recognize
-							the difficulty of
-							learning—we’ve all been there.</p>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-3 -->
+							students in a community with over 900 dedicated members. Founded by college and high school students, we recognize
+							the difficulty of learning—we’ve all been there.</p>
+					</div>
+				</div> 
 				<div class="col-lg-1"></div>
 				<div class="col-lg-2">
 					<div class="widget">
@@ -514,48 +441,41 @@
 							<li><a href="get-involved.html">Get Involved</a></li>
 							<li><a href="reviews.html">Reviews</a></li>
 						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-3 -->
+					</div> 
+				</div>
 				<div class="col-lg-1"></div>
 				<div class="col-lg-3">
 					<div class="widget">
 						<h3>Contact</h3>
 						<address style="color: #AFA99E;">Massachusetts, United States</address>
 						<ul class="list-unstyled links mb-4">
-							<li><a href="tel://19787295098">‭+1 (978) 729-5098‬</a></li>
-							<li><a href="mailto:silverlinetutoring2021@gmail.com">silverlinetutoring2021@gmail.com</a>
-							</li>
+							<li><a href="tel://7862959992">‭(786) 295-9992</a></li>
+							<li><a href="mailto:silverlinetutoring2021@gmail.com">silverlinetutoring2021@gmail.com</a></li>
 						</ul>
-					</div> <!-- /.widget -->
-				</div> <!-- /.col-lg-3 -->
-				<p> This
-					website was made by <a href="https://github.com/Tarune28" target="_blank"
-						rel="nofollow noopener">Tarun Eswar</a>
-				</p>
-			</div> <!-- /.row -->
+					</div> 
+				</div> 
+				<p> This website was made by <a href="https://github.com/Tarune28" target="_blank" rel="nofollow noopener">Tarun Eswar</a></p>
+			</div>
 			<hr>
 			<div class="row">
 				<div style="color:white" class="col-lg-6">
 					<p class="copy">&copy;
-						<script>document.write(new Date().getFullYear());</script> Silverline Tutoring Services | EIN: 88-3149458</a>
+						<script>document.write(new Date().getFullYear());</script> Silverline Tutoring Services | EIN:
+						88-3149458</a>
 					</p>
 				</div>
 				<div class="col-lg-6 text-end">
 					<ul class="list-unstyled social">
 						<li><a href="https://discord.com/invite/wQMk8gCect"><span class="icon-link"></span></a></li>
-						<li><a href=" https://www.instagram.com/silverlinetutoring/"><span
-									class="icon-instagram"></span></a></li>
-						<li><a href="https://www.youtube.com/channel/UCc-c1_wUoQPavLeKE5I2_aA"><span
-									class="icon-youtube"></span></a></li>
-						<li><a href="https://m.facebook.com/people/Silverline-Tutoring/100078405522496/"><span
-									class="icon-facebook"></span></a></li>
-						<li><a href="https://www.linkedin.com/company/silverline-tutoring-services/"><span
-									class="icon-linkedin"></span></a></li>
+						<li><a href=" https://www.instagram.com/silverlinetutoring/"><span class="icon-instagram"></span></a></li>
+						<li><a href="https://www.youtube.com/channel/UCc-c1_wUoQPavLeKE5I2_aA"><span class="icon-youtube"></span></a></li>
+						<li><a href="https://m.facebook.com/people/Silverline-Tutoring/100078405522496/"><span class="icon-facebook"></span></a></li>
+						<li><a href="https://www.linkedin.com/company/silverline-tutoring-services/"><span class="icon-linkedin"></span></a></li>
 					</ul>
 				</div>
 			</div>
-		</div> <!-- /.container -->
-	</div> <!-- /.site-footer -->
+		</div>
+	</div>
 
 
 	<!-- Preloader -->
@@ -565,6 +485,8 @@
 			<span class="visually-hidden">Loading...</span>
 		</div>
 	</div>
+
+	<!-- Javascript -->
 	<script>
 		const navbar = document.querySelector('.site-nav');
 		const logo = document.querySelector('.float-start');
@@ -581,7 +503,6 @@
 			}
 		};
 	</script>
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="js/count.js"></script>
 	<script src="js/bootstrap.bundle.min.js"></script>
