--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
 							sans-serif; font-weight: 800;">About Silverline</h1>
 						<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="100"></h2>
 
-						<p data-aos="fade-up" data-aos-delay="200">Silverline Tutoring is an educational 501(c)(3) nonprofit connecting tutors and students within our organization of over 1600 dedicated members. Founded by college and high school students, this company recognizes the difficulty of learning—we’ve all been there.</p>
+						<p data-aos="fade-up" data-aos-delay="200">Silverline Tutoring is an educational 501(c)(3) nonprofit connecting tutors and students within our organization of over 900 dedicated members. Founded by college and high school students, this company recognizes the difficulty of learning—we’ve all been there.</p>
 
 						<p data-aos="fade-up" data-aos-delay="300">From the depths of math to complex texts in English, every student has struggled at one point or another. We want to bridge this divide in education by providing free tutoring to any student. But how do we accomplish this difficult task?</p>
 
@@ -126,7 +126,7 @@
 							font-weight: 800;" data-aos="fade-up">Our Goals</h1>
 						<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="100"></h2>
 
-						<p data-aos="fade-up" data-aos-delay="200">At Silverline, we want to solve the education divide, one student at a time, by making learning enjoyable and stress-free for all. Therefore, we never hold students accountable to a strict schedule and always work based on the student needs, allowing them to benefit the most. Our tutors are vetted in advance to ensure that they are student-friendly and adaptable. Monthly trivia contests and other games are also held to promote a fun learning environment. We want to set our students up for success while building a strong community that facilitates opportunities for everyone involved. Because of this foundation, our community now serves up to 1600 members.</p>
+						<p data-aos="fade-up" data-aos-delay="200">At Silverline, we want to solve the education divide, one student at a time, by making learning enjoyable and stress-free for all. Therefore, we never hold students accountable to a strict schedule and always work based on the student needs, allowing them to benefit the most. Our tutors are vetted in advance to ensure that they are student-friendly and adaptable. Monthly trivia contests and other games are also held to promote a fun learning environment. We want to set our students up for success while building a strong community that facilitates opportunities for everyone involved. Because of this foundation, our community now serves up to 990 members.</p>
 					</div>
 
 
@@ -173,7 +173,7 @@
 							<h3>Silverline Tutoring</h3>
 							<p>Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and
 								students in a community
-								with over 1600 dedicated members. Founded by college and high school students, we recognize
+								with over 900 dedicated members. Founded by college and high school students, we recognize
 								the difficulty of
 								learning—we’ve all been there.</p>
 						</div> <!-- /.widget -->
@@ -198,7 +198,7 @@
 							<h3>Contact</h3>
 							<address style="color: #AFA99E;">Massachusetts, United States</address>
 							<ul class="list-unstyled links mb-4">
-								<li><a href="tel://19787295098">‭+1 (978) 729-5098‬</a></li>
+								<li><a href="tel://7862959992">‭(786) 295-9992</a></li>
 								<li><a href="mailto:silverlinetutoring2021@gmail.com">silverlinetutoring2021@gmail.com</a>
 								</li>
 							</ul>
