--- a/community.html
+++ b/community.html
@@ -259,7 +259,7 @@
 							<h2 class="mb-0">
 								<button class="btn btn-link collapsed" type="button" data-bs-toggle="collapse"
 									data-bs-target="#collapseFive" aria-expanded="false"
-									aria-controls="collapseFive">Centeral America</button>
+									aria-controls="collapseFive">Central America</button>
 							</h2>
 
 							<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
@@ -372,7 +372,7 @@
 
 		</div>
 	</div>
-	<section class="counter-section">
+	<section class="counter-section" id="target">
 		<div class="container">
 			<h1 style="color: white; font-family: 'Work Sans', sans-serif;
 			font-weight: 800;" data-aos="fade-up">Silverline Statistics</h1>
@@ -385,7 +385,7 @@
 			</div>
 			<div class="col-sm-3">
 			  <div class="counter-count">
-				<span class="count">82</span>
+				<span class="count">78</span>
 				<h3 class="title">Average Tutoring Hours Per Week</h3>
 			  </div>
 			</div>
@@ -416,7 +416,7 @@
 		  </div>
 		  <div class="col-sm-3">
 			<div class="counter-count">
-			  <span class="count">1600</span>
+			  <span class="count">990</span>
 			  <h3 class="title">Total Members</h3>
 			</div>
 		  </div>
@@ -494,7 +494,7 @@
 						<h3>Silverline Tutoring</h3>
 						<p>Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and
 							students in a community
-							with over 1600 dedicated members. Founded by college and high school students, we recognize
+							with over 900 dedicated members. Founded by college and high school students, we recognize
 							the difficulty of
 							learning—we’ve all been there.</p>
 					</div> <!-- /.widget -->
@@ -519,7 +519,7 @@
 						<h3>Contact</h3>
 						<address style="color: #AFA99E;">Massachusetts, United States</address>
 						<ul class="list-unstyled links mb-4">
-							<li><a href="tel://19787295098">‭+1 (978) 729-5098‬</a></li>
+							<li><a href="tel://7862959992">‭(786) 295-9992</a></li>
 							<li><a href="mailto:silverlinetutoring2021@gmail.com">silverlinetutoring2021@gmail.com</a>
 							</li>
 						</ul>
