--- a/get-involved.html
+++ b/get-involved.html
@@ -139,7 +139,7 @@
 						<h3>Silverline Tutoring</h3>
 						<p>Silverline Tutoring is an educational 501(c)(3) nonprofit organization connecting tutors and
 							students in a community
-							with over 1600 dedicated members. Founded by college and high school students, we recognize
+							with over 900 dedicated members. Founded by college and high school students, we recognize
 							the difficulty of
 							learning—we’ve all been there.</p>
 					</div> <!-- /.widget -->
@@ -164,7 +164,7 @@
 						<h3>Contact</h3>
 						<address style="color: #AFA99E;">Massachusetts, United States</address>
 						<ul class="list-unstyled links mb-4">
-							<li><a href="tel://19787295098">‭+1 (978) 729-5098‬</a></li>
+							<li><a href="tel://7862959992">‭(786) 295-9992</a></li>
 							<li><a href="mailto:silverlinetutoring2021@gmail.com">silverlinetutoring2021@gmail.com</a>
 							</li>
 						</ul>
