--- a/team.html
+++ b/team.html
@@ -101,7 +101,7 @@
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Rishi Ajmera</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief
-                                Executive Board</h6>
+                                Executive Officer</h6>
                             <p>Rishi Ajmera is currently a high school senior from Eastern Massachusetts. Rishi’s
                                 initiative and concern about the
                                 barriers and inequality within education led him to found and run the organization.
@@ -146,7 +146,7 @@
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Tarun Eswar</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief
-                                Technology Officier</h6>
+                                Technology Officer</h6>
                             <p>Tarun is currently a rising high school junior in Eastern Massachusetts. His interest in
                                 tutoring as well as development allowed him to fit in at Silverline as the technology
                                 head. Tarun’s passion in tutoring mainly came after running math workshops for the NSF
