--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
             <p>Silverline tutoring services is made up of a team of excelling highschool and college students from a
                 variety of places. Their goal is to use previous real-world experiences and lessons to build a stronger
                 and more successful organization. The purpose? Solving the education divide.<br><br>Interested in
-                joining the team? Find more information <a
+                joining the team? Find more information <a target="_0"
                     href="https://docs.google.com/document/d/1UMz9CIYSuJ1WEQWuOusSQlHchQwpgFmqwVLOTzX0D9w/edit">here</a>.
             </p>
             <div class="row align-items-stretch">
