--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 					<div class="row text-center">
 						<div class="col-lg-33 stats">
 							<i class="fa fa-map" aria-hidden="true"></i>
-							<div class="counting" data-count="30">0</div>
+							<div class="counting" data-count="66">0</div>
 							<h5>Countries</h5>
 						</div>
 						<div class="col-lg-33 stats">
@@ -225,8 +225,8 @@
 						</div>
 						<div class="col-lg-33 stats">
 							<i class="fa fa-chalkboard-teacher" aria-hidden="true"></i>
-							<div class="counting" data-count="16">0</div>
-							<h5>Current Tutors</h5>
+							<div class="counting" data-count="52">0</div>
+							<h5>Tutors All Time</h5>
 						</div>
 					</div>
 				</div>
